chore: change default S3 sync cron schedule so it doesn't run as often

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 EXTERNAL_LISTEN_PORT=8080
 MYSQL_PASS
 DRUSH_BACKUP_CRON_SCHEDULE=00 12 1,15 * *
-S3_SYNC_CRON_SCHEDULE=13 * * * *
+S3_SYNC_CRON_SCHEDULE=00 13 1,15 * *
 
